# internal/controllers/controllers.go
@@ -9,6 +9,7 @@ import (
 type IUserUsecase interface {
 	CreateUser(ctx context.Context, user *entities.User, attributes []entities.KeyValuePair) (*entities.User, []entities.UserAttribute, error)
 	GetUserByUsername(ctx context.Context, username string) (*entities.User, []entities.UserAttribute, error)
+	GetAttributesByUsername(ctx context.Context, username string) ([]entities.UserAttribute, error)
 }
 
 type ILoggingWorker interface {
